Prevent stretching

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -302,7 +302,6 @@ h1, h2, h3 {
 
   img {
     width: 300px;
-    height: 300px;
     border-radius: 50%;
     border: #DCD0D0 5px solid;
     padding: 5px;
